Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,8 +1059,8 @@
    },
    "outputs": [],
    "source": [
-    "names_and_ranks = []\n",
-    "# make sure the list is empty"
+    "names_and_ranks = [] # make sure the list is empty\n",
+    "fo"
    ]
   },
   {
