--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for "
+    "for name_and_rank"
    ]
   },
   {
