Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,7 +1061,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for name_and_rank in city_indices:\n",
-    "    "
+    "    print()"
    ]
   },
   {
