--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for name_and_rank in city_indices:\n",
+    "for name_and_rank in names:\n",
     "    print()"
    ]
   },
