Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,8 +1060,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for name_and_rank in names:\n",
-    "    print()"
+    "for name_and_rank in names_and_ranks:\n",
+    "    print(c)"
    ]
   },
   {
