--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for rank, in names_and_ranks:\n",
+    "for name_ in names_and_ranks:\n",
     "    print(city_indices)"
    ]
   },
