--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,7 +1061,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for name_and_rank in names_and_ranks:\n",
-    "    print(city_indices[name_and_rank]+'')"
+    "    print(city_indices[name_and_rank]+'. '+)"
    ]
   },
   {
