Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,15 +1053,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for name_and_rank in names_and_ranks:\n",
-    "    print(city_indices[name_and_rank]+'. ', city_names)"
+    "    print(city_indices[name_and_rank]+'. ', city_names[name_and_rank])"
    ]
   },
   {
