--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,7 +1058,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for name_and_rank in names_and_ranks:\n",
+    "for ran in names_and_ranks:\n",
     "    print(city_indices[name_and_rank]+'. ', city_names[name_and_rank])"
    ]
   },
