Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,8 +1058,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for ran in names_and_ranks:\n",
-    "    print(city_indices[name_and_rank]+'. ', city_names[name_and_rank])"
+    "for rank, name in names_and_ranks:\n",
+    "    print(city_indices[name_an]+'. ', city_names[name_and_rank])"
    ]
   },
   {
