--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank, name in names_and_ranks:\n",
-    "    append(city_indices[rank]+'. ', city_names[name])"
+    "    append.(city_indices[rank]+'. ', city_names[name])"
    ]
   },
   {
