Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,13 +1053,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank, name in names_and_ranks:\n",
-    "    append.(city_indices[rank]+'. ', city_names[name])"
+    "    append.names_and_ranks(city_indices[rank]+'. ', city_names[name])"
    ]
   },
   {
