Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,8 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank, name in names_and_ranks:\n",
-    "    append.names_and_ranks(city_indices[rank]+'. ', city_names[name])"
+    "    append.names_and_ranks(city_indices[rank]+'. ', city_names[name])\n",
+    "print(names_a)"
    ]
   },
   {
