Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank, name in names_and_ranks:\n",
     "    append.names_and_ranks(city_indices[rank]+'. ', city_names[name])\n",
-    "print(names_a)"
+    "print(names_and_ranks)"
    ]
   },
   {
