--- a/index.ipynb
+++ b/index.ipynb
@@ -1066,7 +1066,7 @@
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for rank, name in names_and_ranks:\n",
+    "for name_and_rank in names_and_ranks:\n",
     "    names_and_ranks.append((city_indices[rank]+'. ', city_names[name]))\n",
     "print(names_and_ranks)"
    ]
