--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for name_and_rank in names_and_ranks:\n",
-    "    names_and_ranks.append(city_in)\n",
+    "    names_and_ranks.append(city_indices[name_and_rank], )\n",
     "print(names_and_ranks)"
    ]
   },
