--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for name_and_rank in names_and_ranks:\n",
-    "    names_and_ranks.append('{name_and_rank + 1})\n",
+    "    names_and_ranks.append('{name_and_rank + 1}+'. ', {city})\n",
     "print(names_and_ranks)"
    ]
   },
