--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,7 +1068,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for name_and_rank in names_and_ranks:\n",
-    "    names_and_ranks.append({name_and_rank + 1}. {city_names[name_and_rank]})\n",
+    "    names_and_ranks.append(name_and_rank + 1, city_names[name_and_rank]})\n",
     "print(names_and_ranks)"
    ]
   },
