Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,22 +1053,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-07b3d1f58038>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-07b3d1f58038>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append({name_and_rank + 1}. {city_names[name_and_rank]})\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for name_and_rank in names_and_ranks:\n",
-    "    names_and_ranks.append(name_and_rank + 1, city_names[name_and_rank]})\n",
+    "    names_and_ranks.append(name_and_rank + 1, city_names[name_and_rank])\n",
     "print(names_and_ranks)"
    ]
   },
