--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for element in names_and_ranks:\n",
-    "    names_and_ranks.append()\n",
+    "    names_and_ranks.append(cit)\n",
     "print(names_and_ranks)"
    ]
   },
