Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1066,8 +1066,8 @@
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for element in names_and_ranks:\n",
-    "    names_and_ranks.append(city_indices[element+1], city_names[element])\n",
+    "for rank,name in names_and_ranks:\n",
+    "    names_and_ranks.append(city_indices[r+1], city_names[element])\n",
     "print(names_and_ranks)"
    ]
   },
