Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank,name in names_and_ranks:\n",
-    "    names_and_ranks.append(city_indices[r+1], city_names[element])\n",
+    "    names_and_ranks.append(city_indices[rank+1], city_names[name])\n",
     "print(names_and_ranks)"
    ]
   },
