Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1066,7 +1066,7 @@
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for rank,name in names_and_ranks:\n",
+    "for rank in city_:\n",
     "    names_and_ranks.append(city_indices[rank+1], city_names[name])\n",
     "print(names_and_ranks)"
    ]
