Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank in city_indices:\n",
-    "    names_and_ranks.append(city_indices[rank+1], city_names[rank])\n",
+    "    names_and_ranks.append({rank+1} {})\n",
     "print(names_and_ranks)"
    ]
   },
