Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}', '{rank+1}. {city_names[rank]}']\n"
+      "['(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])']\n"
      ]
     }
    ],
