Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,21 +1053,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])', '(rank+1). (city_names[rank])']\n"
+      "['[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]', '[rank+1]. [city_names[rank]]']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank in city_indices:\n",
-    "    names_and_ranks.append('(rank+1). (city_names[rank])')\n",
+    "    names_and_ranks.append('rank. [city_names[rank]]')\n",
     "print(names_and_ranks)"
    ]
   },
