Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,21 +1053,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]', 'rank. city_names[rank]']\n"
+      "['{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}']\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank in city_indices:\n",
-    "    names_and_ranks.append('{city_indices + 1}. ')\n",
+    "    names_and_ranks.append('{city_indices + 1}. {city_names[rank]}')\n",
     "print(names_and_ranks)"
    ]
   },
