Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for rank in city_indices:\n",
-    "    names_and_ranks.append('{city_indices + 1}. {city_names[rank]}')\n",
+    "    names_and_ranks.append(f'{rank + 1}. {city_names[rank]}')\n",
     "print(names_and_ranks)"
    ]
   },
