Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}', '{city_indices + 1}. {city_names[rank]}']\n"
+      "['1. Buenos Aires', '2. Toronto', '3. Pyeongchang', '4. Marakesh', '5. Albuquerque', '6. Los Cabos', '7. Greenville', '8. Archipelago Sea', '9. Walla Walla Valley', '10. Salina Island', '11. Solta', '12. Iguazu Falls']\n"
      ]
     }
    ],
