--- a/index.ipynb
+++ b/index.ipynb
@@ -1064,24 +1064,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12. Iguazu Falls'"
+       "'1. Buenos Aires'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
-    "names_and_ranks[1] # '2. Toronto'\n",
-    "names_and_ranks[-1] # '12. Iguazu Falls'"
+    "#names_and_ranks[1] # '2. Toronto'\n",
+    "#names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
