--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,7 +1099,8 @@
    },
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for "
    ]
   },
   {
