--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,7 +1099,7 @@
    },
    "outputs": [],
    "source": [
-    "population = \n",
+    "population = cities[]\n",
     "city_populations = []\n",
     "for pop in "
    ]
