Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,9 +1099,10 @@
    },
    "outputs": [],
    "source": [
-    "population = cities[]\n",
-    "city_populations = []\n",
-    "for pop in "
+    "population = cities['Population']\n",
+    "print(population)\n",
+    "#city_populations = []\n",
+    "#for pop in "
    ]
   },
   {
