Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1109,10 +1109,8 @@
     }
    ],
    "source": [
-    "population = cities['Population']\n",
-    "print(population)\n",
-    "#city_populations = []\n",
-    "#for pop in "
+    "city_populations = []\n",
+    "for populat in "
    ]
   },
   {
