--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,7 +1110,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for populat in "
+    "for population in city_indices:\n",
+    "    city_populations.append"
    ]
   },
   {
