--- a/index.ipynb
+++ b/index.ipynb
@@ -1111,7 +1111,7 @@
    "source": [
     "city_populations = []\n",
     "for population in city_indices:\n",
-    "    city_populations.append()"
+    "    city_populations.append(cities[])"
    ]
   },
   {
