--- a/index.ipynb
+++ b/index.ipynb
@@ -1111,7 +1111,8 @@
    "source": [
     "city_populations = []\n",
     "for population in city_indices:\n",
-    "    city_populations.append(cities[])"
+    "    city_populations.append(cities[population]['Population'])\n",
+    "    "
    ]
   },
   {
