--- a/index.ipynb
+++ b/index.ipynb
@@ -1093,22 +1093,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_populations = []\n",
     "for population in city_indices:\n",
-    "    city_populations.append(cities[population]['Population'])\n",
-    "print(city_populations)"
+    "    city_populations.append(cities[population]['Population'])"
    ]
   },
   {
