Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1104,6 +1104,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_populations[0] # 2891000"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -1119,7 +1128,6 @@
     }
    ],
    "source": [
-    "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
     "city_populations[-1] # 0"
    ]
