Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2128,7 +2128,8 @@
    },
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for area in "
    ]
   },
   {
