Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2129,7 +2129,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for area in "
+    "for area in city_indices:\n",
+    "    "
    ]
   },
   {
