Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2130,7 +2130,7 @@
    "source": [
     "city_areas = []\n",
     "for area in city_indices:\n",
-    "    city_areas.append()"
+    "    city_areas.append(cities[area]['Area'])"
    ]
   },
   {
